--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "swiper": "^11.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
